src/test/deca/context/valid/autre/asm.deca
//Test asm method body valide.

class Test {
    int a = 1;
    
    
    void test() asm("
    LOAD #1, R1
    WINT
    ");
   
}

{
    Test t = new Test();
    t.test();
}