src/test/deca/context/invalid/class/call-method-not-existent.deca
// Programme appelant une méthode sur une classe qui n'en a pas

class A {}

{
    A a = new A();
    a.method();
}